studio/public/stylesheets/site.css
/*
 * Base structure
 */

html, body { height: 100%; }
body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overflow: hidden; }

#studio-wrapper {
    width: 100%;
    height: 100%;
    -webkit-transform: translateX(0);
    transform: translateX(0);
    -webkit-transition: .3s ease all;
    transition: .3s ease all;
}

#studio-wrapper.blur-background { -webkit-filter: blur(3px); filter: blur(3px); }

.navbar { background-color: #f5f5f5; margin: 0; padding: 0; border: 0; }
.navbar-btn { width: 40px; }
.navbar-title { display: inline-block; font-size: 1.4em; line-height: 50px; margin: 0 0 0 20px; padding: 0; color: #737373; }
.navbar-tabs { text-align: center; }
.navbar-tab { display: inline-block; font-size: 1.1em; line-height: 25px; margin: 0 30px 0 30px; padding: 13px 0 10px 0; border-bottom: 2px solid transparent; color: #737373; cursor: pointer; transition: border-color 0.4s; }
.navbar-tab:hover { color: #262626; border-color: #3182bd; }
.navbar-tab.selected { font-weight: bold; color: #262626; border-color: #3182bd; }

#studio-container { position: relative; perspective: 1200px; height: -webkit-calc(100% - 50px); height: -moz-calc(100% - 50px); height: calc(100% - 50px); }
#studio-canvases { height: 100%; transition: transform 0.6s; transform-origin: right center; transform-style: preserve-3d; }
.studio-canvas { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: #e5e5e5; backface-visibility: hidden; }
#offline-canvas { transform: rotateY(0deg); }
#online-canvas { transform: rotateY(180deg); }
#studio-canvases.flipped { transform: translateX( -100% ) rotateY( -180deg ); }
.diagram-container { position: relative; width: 100%; height: 100%; overflow-y: scroll; }

.library-controls { position: absolute; top: 15px; left: 15px; box-shadow: 0px 6px 12px rgba(0,0,0,0.125); z-index: 2; }

#library-browser{
    position: absolute;
    z-index: 1000;
    top: 120px;
    left: 15px;
    width: 180px;
    height: -webkit-calc(100% - 135px);
    height: -moz-calc(100% - 135px);
    height: calc(100% - 135px);
    border: 1px solid #989898;
    background-color: white;
    box-shadow: 0px 6px 12px rgba(0,0,0,0.175);
}

#library-browser.ng-leave { -webkit-animation: fadeOut 0.6s; }
#library-browser.ng-enter { -webkit-animation: fadeIn 0.6s; }

#library-browser:before {
    content: "";
    position: absolute;
    top: -17px;
    left: 5px;
    border-right: 17px solid transparent;
    border-left: 17px solid transparent;
    border-bottom: 17px solid #989898;
}

#library-browser:after {
    content: "";
    position: absolute;
    top: -16px;
    left: 5px;
    border-right: 17px solid transparent;
    border-left: 17px solid transparent;
    border-bottom: 17px solid #fff;
}

#browser-container { position: relative; width: 100%; height: 100%; overflow-x: hidden; }

.studio-controls { position: absolute; top: 15px; right: 15px; box-shadow: 0px 6px 12px rgba(0,0,0,0.125); z-index: 2; }
.studio-controls button { width: 40px; }
button.diagram-evaluating { color: #2ca02c; }

#studio-wrapper.show-sidebar {
    -webkit-transform: translateX(200px);
    transform: translateX(200px);
}

#diagrams-menu {
    position: absolute;
    left: -200px;
    top: 0px;
    background-color: #d9d9d9;
    width:200px;
    height: 100%;
    overflow-y:auto;
    overflow-x:hidden;
}

.wrapper {
    min-height: 100%;
    height: auto !important;
    height: 100%;
    margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */
}

#studio-wrapper.show-props {
    -webkit-transform: translateX(-200px);
    transform: translateX(-200px);
}

#properties-menu {
    position: absolute;
    right: -200px;
    top: 0px;
    background-color: #d9d9d9;
    width:200px;
    height: 100%;
    overflow-y:auto;
    overflow-x:hidden;
}

/* Animated loader */

#loader-overlay { position: absolute; top: 0; left: 0; background-color: #e5e5e5; width: 100%; height: 100%; z-index: 3; }
#loader-overlay.ng-leave { -webkit-animation: fadeOut 1s; }
.loader {
    margin: 25px auto;
    font-size: 10px;
    position: relative;
    text-indent: -9999em;
    border-top: 0.8em solid rgba(49, 130, 189, 0.2);
    border-right: 0.8em solid rgba(49, 130, 189, 0.2);
    border-bottom: 0.8em solid rgba(49, 130, 189, 0.2);
    border-left: 0.8em solid #3182bd;
    -webkit-transform: translateZ(0);
    -ms-transform: translateZ(0);
    transform: translateZ(0);
    -webkit-animation: load 0.8s infinite linear;
    animation: load 0.8s infinite linear;
}
.loader,
.loader:after {
    border-radius: 50%;
    width: 6em;
    height: 6em;
}
@-webkit-keyframes load {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}
@keyframes load {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}

/* deployment notification */

#deployment-notification {
    position: absolute;
    right: 10px;
    bottom: 10px;
    width: 200px;
    height: 80px;
    background-color: #c7e9c0;
    border: 1px solid #31a354;
    border-radius: 10px;
    z-index: 4;
}

#deployment-notification.ng-leave { -webkit-animation: slideOutDown 0.6s; }
#deployment-notification.ng-enter { -webkit-animation: slideInUp 0.6s; }

#notification-exit { color: #31a354; position: absolute; right: 5px; top: 3px; cursor: pointer; }

.diagrams-menu-header { height: 50px; width: 100%; }

.diagrams-menu-body {
    background: darkgray;
    height: calc(100% - 125px);
    width: 100%;
    overflow-y: auto;
}
.diagrams-menu-body-item {
    height: auto;
    background: white;
    margin: 10px;
    padding: 5px;
}

.diagrams-menu-body-item-name {
    height: 25px;
    width: calc(100% - 10px);
    text-align: center;
    vertical-align: middle;
    margin: 5px;
}

.diagrams-menu-body-item-name:before { content: ""; display: inline-block; vertical-align: middle; height: 100%; }

.diagrams-menu-body-item-name:hover { cursor: pointer; color: lightskyblue }

.diagrams-menu-body-item-options {
    height: 25px;
    width: calc(100% - 10px);
    margin: 5px;
    vertical-align: middle;
}

.diagrams-menu-body-item-options-toggle {
    float: left;
    padding: 5px;
    height: 25px;
    width: 90px;
    text-align: center;
    vertical-align: middle;
}

.diagrams-menu-body-item-options-toggle:before { content: ""; display: inline-block; vertical-align: middle; height: 100%; }

.diagrams-menu-body-item-options-toggle:hover { cursor: pointer; }

.diagrams-menu-body-item-options-delete {
    float: right;
    height: 25px;
    width: calc(100% - 130px);
    text-align: center;
    vertical-align: middle;
}

.diagrams-menu-body-item-options-delete:before { content: ""; display: inline-block; vertical-align: middle; height: 100%; }

.diagrams-menu-body-item-options-delete:hover { cursor: pointer; color: red }

.diagrams-menu-body-item-info-container { opacity: 1; }

.diagrams-menu-body-item-info {
    opacity: 1;
    height: auto;
    width: calc(100% - 10px);
    margin: 5px;
    padding: 5px;
}

.diagrams-menu-body-item-info:hover { cursor: default; }

.diagrams-menu-footer { height: 50px; width: 100%; }

.diagrams-menu-footer-name {
    width: 100%;
    height: 50px;
    vertical-align: middle;
    text-align: center;
}

.diagrams-menu-footer-name:before { content: ""; display: inline-block; vertical-align: middle; height: 100%; }

.diagrams-menu-footer-company {
    width: 100%;
    height: 25px;
    vertical-align: middle;
    text-align: center;
}

.diagrams-menu-footer-company:before { content: ""; display: inline-block; vertical-align: middle; height: 100%; }

